# HorizonM

./: .gitignore  .travis.yml  CMakeLists.txt  HorizonM.cia  Makefile  README.md  mktar.sh  travis-build.sh  travis-deps.sh  unmktar.sh
HorizonScreen/: .gitignore  HzScreen.bat  Makefile  winlaunch.bat
HorizonScreen/inc/PC/Windows_NT/include/: jconfig.h
HorizonScreen/inc/PC/Windows_NT/lib/: libjpeg.la  libturbojpeg.la
HorizonScreen/soos/: main.cpp
HzLoad/: HzLoad.cia  Makefile  README.md
HzLoad/soos/: main.c
cmake/: FindLibJpegTurbo.cmake  FindSDL2.cmake  bin2c.cmake
data/: Info.plist
misclib/targa-1/: LICENSE  targa.h  teste.c
platform/PC/: platform.h
soos/: _init.c  main.cpp  miscdef.h  utils.c  utils.h  utils.hpp
soos/misc/: pattern.c  pattern.h
soos/service/: gx.c  gx.h
soos/tga/: targa.c
