cmake_minimum_required(VERSION 3.0)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")

project(HorizonScreen)
if(WIN32)
    find_package(SDL2 REQUIRED)
    find_package(LibJpegTurbo REQUIRED)
    include_directories(${LibJpegTurbo_INCLUDE_DIRS})
    include_directories(${SDL2_INCLUDE_DIR})
    set(LIBS ${LIBS} ${LibJpegTurbo_LIBRARIES})
    set(LIBS ${LIBS} ${SDL2_LIBRARY})
elseif(APPLE)
    find_package(SDL2 REQUIRED)
    find_package(LibJpegTurbo REQUIRED)
    include_directories(${LibJpegTurbo_INCLUDE_DIRS})
    include_directories(${SDL2_INCLUDE_DIR})
    set(LIBS ${LIBS} ${LibJpegTurbo_LIBRARIES})
    set(LIBS ${LIBS} ${SDL2_LIBRARY})
elseif(UNIX)
    find_package(SDL2 REQUIRED)
    find_package(LibJpegTurbo REQUIRED)
    include_directories(${LibJpegTurbo_INCLUDE_DIRS})
    include_directories(${SDL2_INCLUDE_DIR})
    set(LIBS ${LIBS} ${LibJpegTurbo_LIBRARIES})
    set(LIBS ${LIBS} ${SDL2_LIBRARY})
endif()

include_directories(platform/PC)
include_directories(${CMAKE_CURRENT_BINARY_DIR})
set(SOURCES soos/main.cpp
        soos/inet_pton.c
        soos/tga/targa.c)
add_custom_target(ctrufont COMMAND ${CMAKE_COMMAND} -DINFILE=${CMAKE_CURRENT_SOURCE_DIR}/data/ctrufont.bin -DOUTFILE=ctrufont_bin.h -DVARNAME=ctrufont_bin -P ${CMAKE_CURRENT_SOURCE_DIR}/cmake/bin2c.cmake)

string(TIMESTAMP DT "%Y/%m/%d")
add_definitions(-DBUILDTIME=\"$(DT)\")
if(APPLE)
    add_executable(HorizonScreen MACOSX_BUNDLE ${SOURCES})
    else()
    add_executable(HorizonScreen ${SOURCES})
endif()

add_dependencies(HorizonScreen ctrufont)
target_link_libraries(HorizonScreen ${LIBS})